--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,9 @@
 			<span>My Projects include</span>
 			<span class="cd-words-wrapper">
 				<b class="is-visible">BlockChain</b>
-				<b>Smart Contracts</b>
-				<b>Web Development</b>
-				<b>Web Applications</b>
+				<b>Solidity</b>
+				<b>Websites</b>
+				<b>Web Apps</b>
 				<b>Python</b>
 			</span>
 			<!--			<div class="btn-ber">
