--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -180,6 +180,12 @@
                   <td><b>€{{totalCRO_EUR}}</b></td>
                 </tr>
                 <tr>
+                  <td>Chiliz</td>
+                  <td>€{{chzEUR}}</td>
+                  <td>{{myCHZ}}</td>
+                  <td><b>€{{totalCHZ_EUR}}</b></td>
+                </tr>
+                <tr>
                   <td>Usd Tether</td>
                   <td>€{{usdtEUR}}</td>
                   <td>{{myUSDT}}</td>
