--- a/templates/index.html
+++ b/templates/index.html
@@ -345,9 +345,13 @@
 											data-validation-required-message="Please enter a message."></textarea>
 									</div>
 								</div>
-								
-								<button id="sendMessageButton" class="sim-btn hvr-bounce-to-top" type="submit">Send
-									Message</button>
+								<div class="col-md-6">
+									{{recaptcha}}
+								</div>
+								<div class="col-md-6">
+									<button id="sendMessageButton" class="sim-btn hvr-bounce-to-top" type="submit">Send
+										Message</button>
+								</div>
 							</div>
 						</form>
 					</div>
@@ -357,7 +361,7 @@
 
 		</div><!-- end container -->
 	</div><!-- end section -->
-	
+
 	<a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i>^</a>
 
 	<!-- ALL JS FILES -->
