--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -186,6 +186,24 @@
                   <td><b>€{{totalCHZ_EUR}}</b></td>
                 </tr>
                 <tr>
+                  <td>Fetch.AI</td>
+                  <td>€{{fetEUR}}</td>
+                  <td>{{myFET}}</td>
+                  <td><b>€{{totalFET_EUR}}</b></td>
+                </tr>
+                <tr>
+                  <td>UniBright</td>
+                  <td>€{{ubtEUR}}</td>
+                  <td>{{myUBT}}</td>
+                  <td><b>€{{totalUBT_EUR}}</b></td>
+                </tr>
+                <tr>
+                  <td>Aave</td>
+                  <td>€{{lendEUR}}</td>
+                  <td>{{myLEND}}</td>
+                  <td><b>€{{totalLEND_EUR}}</b></td>
+                </tr>
+                <tr>
                   <td>Usd Tether</td>
                   <td>€{{usdtEUR}}</td>
                   <td>{{myUSDT}}</td>
