--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
 			<div class="col-md-4 col-sm-6 gallery-grid gal_a">
 				<div class="gallery-single fix">
 					<img src="static/uploads/gallery_img-02.jpg" class="img-fluid" alt="Image">
-					<a href="/toursIreland" target="_blank">
+					<a href="http://www.tours-ireland.ie" target="_blank">
 						<div class="img-overlay text-center ">
 							<p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Tours Ireland</p>
 						</div>
