--- a/templates/update.html
+++ b/templates/update.html
@@ -12,7 +12,7 @@
         <div class="section-title text-center">
             <h3>Update Task </h3>
         </div><!-- end title -->
-    
+
         <div class="row">
             <div class="col-md-12">
                 <div class="contact_form">
@@ -20,12 +20,14 @@
                     <br>
                     <div class="clearfix"></div>
                     <div class="col-lg-12 text-center">
-                    <form action="/update/{{task.id}}" method="POST">
-                        <input class="form-control" name="content" id="content" type="text" value="{{task.content}}" required="required" data-validation-required-message="Please enter a task.">
-                        <button id="sendMessageButton" class="sim-btn hvr-bounce-to-top" type="submit">Add Task</button>
-                    </form>
+                        <form action="/update/{{task.id}}" method="POST">
+                            <input class="form-control" name="content" id="content" type="text" value="{{task.content}}"
+                                required="required" data-validation-required-message="Please enter a task.">
+                            <button id="sendMessageButton" class="sim-btn hvr-bounce-to-top" type="submit">Add
+                                Task</button>
+                        </form>
                     </div>
-                </div>  
+                </div>
             </div><!-- end col -->
         </div><!-- end row -->
     </div><!-- end container -->
