--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         <h3 class="cd-headline clip is-full-width">
             <span>My Projects include</span>
             <span class="cd-words-wrapper">
-				<b class="is-visible">BlockChain</b>
+				<b class="is-visible">JavaScript</b>
 				<b>Solidity</b>
 				<b>Websites</b>
 				<b>Web Apps</b>
@@ -132,12 +132,12 @@
                 </div>
             </div>
             <!-- Card 3 -->
-            <div class="col-md-4 col-sm-6 gallery-grid gal_b">
+            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-03.jpg" class="img-fluid" alt="Image">
-                    <a href="/portfolio" target="_blank">
+                    <img src="static/uploads/gallery_img-13.jpg" class="img-fluid" alt="Image">
+                    <a href="/recipeApp" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Crypto portfolio</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Recipe App</p>
                         </div>
                     </a>
                 </div>
@@ -154,12 +154,12 @@
                 </div>
             </div>
             <!-- Card 5 -->
-            <div class="col-md-4 col-sm-6 gallery-grid gal_b">
+            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-05.jpg" class="img-fluid" alt="Image">
-                    <a href="/taskmaster" target="_blank">
+                    <img src="static/uploads/gallery_img-11.jpg" class="img-fluid" alt="Image">
+                    <a href="/quiz" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Task Master</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">JavaScript Quiz</p>
                         </div>
                     </a>
                 </div>
@@ -187,27 +187,29 @@
                 </div>
             </div>
             <!-- Card 8 -->
-            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+            <div class="col-md-4 col-sm-6 gallery-grid gal_b">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-13.jpg" class="img-fluid" alt="Image">
-                    <a href="/recipeApp" target="_blank">
+                    <img src="static/uploads/gallery_img-03.jpg" class="img-fluid" alt="Image">
+                    <a href="/portfolio" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Recipe App</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Crypto portfolio</p>
                         </div>
                     </a>
                 </div>
             </div>
+
             <!-- Card 9 -->
-            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+            <div class="col-md-4 col-sm-6 gallery-grid gal_b">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-11.jpg" class="img-fluid" alt="Image">
-                    <a href="/quiz" target="_blank">
+                    <img src="static/uploads/gallery_img-05.jpg" class="img-fluid" alt="Image">
+                    <a href="/taskmaster" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">JavaScript Quiz</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Task Master</p>
                         </div>
                     </a>
                 </div>
             </div>
+
             <!-- Card 10 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_d">
                 <div class="gallery-single fix">
