--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,6 @@
             <img class="img-fluid" src="images/logo.png" alt="" />
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-	<div class="container">
-		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-			data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-			aria-label="Toggle navigation">
 			Menu
 			<i class="fa fa-bars"></i>
 		</button>
@@ -73,6 +69,7 @@
 
                     <a href="/static/uploads/Shane O'Neill CV.pdf" class="sim-btn hvr-bounce-to-top" target="_blank"><span>View My CV</span></a>
                     <a href="https://www.linkedin.com/in/shane-o-neill-77225712a/" class="sim-btn hvr-bounce-to-top" target="_blank"><span>LinkedIn</span></a>
+                    <a href="https://github.com/JellieBeanz/" class="sim-btn hvr-bounce-to-top" target="_blank"><span>GitHub</span></a>
                 </div>
                 <!-- end messagebox -->
             </div>
@@ -376,62 +373,33 @@
                                 <div class="col-md-6">
                                     <button id="sendMessageButton" class="sim-btn hvr-bounce-to-top" type="submit">Send
 										Message</button>
-                                    <<<<<<< HEAD </div>
                                 </div>
+                            </div>
                         </form>
-                        </div>
                     </div>
                 </div>
-
-
             </div>
-            <!-- end container -->
+
+
         </div>
-        <!-- end section -->
-
-        <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i>^</a>
-
-        <!-- ALL JS FILES -->
-        <script src="/static/js/all.js"></script>
-        <!-- Camera Slider -->
-        <script src="/static/js/jquery.mobile.customized.min.js"></script>
-        <script src="/static/js/jquery.easing.1.3.js"></script>
-        <script src="/static/js/parallaxie.js"></script>
-        <script src="/static/js/headline.js"></script>
-        <!-- Contact form JavaScript -->
-        <script src="/static/js/jqBootstrapValidation.js"></script>
-        <script src="/static/js/contact_me.js"></script>
-        <!-- ALL PLUGINS -->
-        <script src="/static/js/custom.js"></script>
-        <script src="/static/js/jquery.vide.js"></script>
-
-        {% endblock %} =======
+        <!-- end container -->
     </div>
-</div>
-</form>
-</div>
-</div>
-</div>
+    <!-- end section -->
 
+    <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i>^</a>
 
-</div>
-<!-- end container -->
-</div>
-<!-- end section -->
+    <!-- ALL JS FILES -->
+    <script src="/static/js/all.js"></script>
+    <!-- Camera Slider -->
+    <script src="/static/js/jquery.mobile.customized.min.js"></script>
+    <script src="/static/js/jquery.easing.1.3.js"></script>
+    <script src="/static/js/parallaxie.js"></script>
+    <script src="/static/js/headline.js"></script>
+    <!-- Contact form JavaScript -->
+    <script src="/static/js/jqBootstrapValidation.js"></script>
+    <script src="/static/js/contact_me.js"></script>
+    <!-- ALL PLUGINS -->
+    <script src="/static/js/custom.js"></script>
+    <script src="/static/js/jquery.vide.js"></script>
 
-<a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i>^</a>
-
-<!-- ALL JS FILES -->
-<script src="/static/js/all.js"></script>
-<!-- Camera Slider -->
-<script src="/static/js/jquery.easing.1.3.js"></script>
-<script src="/static/js/parallaxie.js"></script>
-<script src="/static/js/headline.js"></script>
-<!-- Contact form JavaScript -->
-<script src="/static/js/jqBootstrapValidation.js"></script>
-<script src="/static/js/contact_me.js"></script>
-<!-- ALL PLUGINS -->
-<script src="/static/js/custom.js"></script>
-<script src="/static/js/jquery.vide.js"></script>
-
-{% endblock %} >>>>>>> 96a8697de9f519b52439d09ebc94989dc2e4dd93
+    {% endblock %}
