fixed recipe scroll

--- a/templates/recipeApp.html
+++ b/templates/recipeApp.html
@@ -19,7 +19,7 @@
         </header>
         <div class="fav-container">
             <h3>Favorite Meals</h3>
-            <ul class="fav-meals" id="fav-meals">
+            <ul class="list" id="fav-meals">
 
             </ul>
         </div>
@@ -36,16 +36,7 @@
         </div>
     </div>
 
-    <ol>
-        <lh>
-            <h2>Features:</h2>
-        </lh>
-        <li>Search for a key word. </li>
-        <li>Add your Favorite meals to Favorites bar using <i class="fa fa-heart"></i>. </li>
-        <li>Click on a meal for more information and ingredients. </li>
-        <li>Refresh the page for a new random meal</li>
-    </ol>
-
+    
 </body>
 
 </html>
