--- a/templates/recipeApp.html
+++ b/templates/recipeApp.html
@@ -19,7 +19,7 @@
         </header>
         <div class="fav-container">
             <h3>Favorite Meals</h3>
-            <ul class="list" id="fav-meals">
+            <ul class="fav-meals" id="fav-meals">
 
             </ul>
         </div>
@@ -36,12 +36,8 @@
         </div>
     </div>
 
-<<<<<<< HEAD
 
 
-=======
-    
->>>>>>> 9a8563e5482309ce515112efe9ba8d1c62dd66e2
 </body>
 
 </html>
