--- a/templates/recipeApp.html
+++ b/templates/recipeApp.html
@@ -19,7 +19,7 @@
         </header>
         <div class="fav-container">
             <h3>Favorite Meals</h3>
-            <ul class="fav-meals" id="fav-meals">
+            <ul class="list" id="fav-meals">
 
             </ul>
         </div>
@@ -35,7 +35,6 @@
             </div>
         </div>
     </div>
-
 
 
 </body>
