--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,9 @@
             <span>My Projects include</span>
             <span class="cd-words-wrapper">
 				<b class="is-visible">JavaScript</b>
-				<b>Solidity</b>
-				<b>Websites</b>
+				<b>Blockchain</b>
 				<b>Web Apps</b>
-				<b>Python</b>
+				<b>React.Js</b>
 			</span>
             <!--			<div class="btn-ber">
 				<a class="get_btn hvr-bounce-to-top" href="#">Get started</a>
@@ -102,9 +101,9 @@
             <div class="col-md-12">
                 <div class="button-group filter-button-group text-center">
                     <button class="active" data-filter="*">All</button>
-                    <button data-filter=".gal_a">Web Development</button>
+                    <button data-filter=".gal_c">Blockchain</button>
                     <button data-filter=".gal_b">Web Applications</button>
-                    <button data-filter=".gal_c">Smart Contracts</button>
+                    <button data-filter=".gal_a">Websites</button>
                     <button data-filter=".gal_d">Certificates</button>
                 </div>
             </div>
@@ -122,23 +121,23 @@
                 </div>
             </div>
             <!-- Card 2 -->
+            <div class="col-md-4 col-sm-6 gallery-grid gal_c">
+                <div class="gallery-single fix">
+                    <img src="static/uploads/gallery_img-15.jpg" class="img-fluid" alt="Image">
+                    <a href="https://www.youtube.com/watch?v=QMix9-AlrM4&feature=youtu.be" target="_blank">
+                        <div class="img-overlay text-center ">
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">TrafiGuard</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- Card 3 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_a">
                 <div class="gallery-single fix">
                     <img src="static/uploads/gallery_img-02.jpg" class="img-fluid" alt="Image">
                     <a href="http://www.tours-ireland.ie" target="_blank">
                         <div class="img-overlay text-center ">
                             <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Tours Ireland</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <!-- Card 3 -->
-            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
-                <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-13.jpg" class="img-fluid" alt="Image">
-                    <a href="/recipeApp" target="_blank">
-                        <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Recipe App</p>
                         </div>
                     </a>
                 </div>
@@ -155,12 +154,12 @@
                 </div>
             </div>
             <!-- Card 5 -->
-            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+            <div class="col-md-4 col-sm-6 gallery-grid gal_c">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-11.jpg" class="img-fluid" alt="Image">
-                    <a href="/quiz" target="_blank">
+                    <img src="static/uploads/gallery_img-16.jpg" class="img-fluid" alt="Image">
+                    <a href="https://github.com/chainaim3003/tradeora" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">JavaScript Quiz</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Tradeora</p>
                         </div>
                     </a>
                 </div>
@@ -168,10 +167,10 @@
             <!-- Card 6 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-06.jpg" class="img-fluid" alt="Image">
-                    <a href="https://dry-coast-19431.herokuapp.com/" target="_blank">
+                    <img src="static/uploads/gallery_img-13.jpg" class="img-fluid" alt="Image">
+                    <a href="/recipeApp" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">PhotoFun</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Recipe App</p>
                         </div>
                     </a>
                 </div>
@@ -179,10 +178,10 @@
             <!-- Card 7 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-12.jpg" class="img-fluid" alt="Image">
-                    <a href="/countdown" target="_blank">
+                    <img src="static/uploads/gallery_img-06.jpg" class="img-fluid" alt="Image">
+                    <a href="https://dry-coast-19431.herokuapp.com/" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Countdown Timer</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">PhotoFun</p>
                         </div>
                     </a>
                 </div>
@@ -200,6 +199,29 @@
             </div>
 
             <!-- Card 9 -->
+            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+                <div class="gallery-single fix">
+                    <img src="static/uploads/gallery_img-11.jpg" class="img-fluid" alt="Image">
+                    <a href="/quiz" target="_blank">
+                        <div class="img-overlay text-center ">
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">JavaScript Quiz</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Card 10 -->
+            <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
+                <div class="gallery-single fix">
+                    <img src="static/uploads/gallery_img-12.jpg" class="img-fluid" alt="Image">
+                    <a href="/countdown" target="_blank">
+                        <div class="img-overlay text-center ">
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Countdown Timer</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- Card 11 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_b">
                 <div class="gallery-single fix">
                     <img src="static/uploads/gallery_img-05.jpg" class="img-fluid" alt="Image">
@@ -210,8 +232,7 @@
                     </a>
                 </div>
             </div>
-
-            <!-- Card 10 -->
+            <!-- Card 12 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_d">
                 <div class="gallery-single fix">
                     <img src="static/uploads/gallery_img-09.jpg" class="img-fluid" alt="Image">
@@ -222,24 +243,35 @@
                     </a>
                 </div>
             </div>
-            <!-- Card 11 -->
+            <!-- Card 13 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_d">
                 <div class="gallery-single fix">
-                    <img src="static/uploads/gallery_img-08.jpg" class="img-fluid" alt="Image">
-                    <a href="/static/uploads/Ethereum.pdf" target="_blank">
+                    <img src="static/uploads/gallery_img-14.jpg" class="img-fluid" alt="Image">
+                    <a href="/static/uploads/React.pdf" target="_blank">
                         <div class="img-overlay text-center ">
-                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Ethereum</p>
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">React.Js</p>
                         </div>
                     </a>
                 </div>
             </div>
-            <!-- Card 12 -->
+            <!-- Card 14 -->
             <div class="col-md-4 col-sm-6 gallery-grid gal_d">
                 <div class="gallery-single fix">
                     <img src="static/uploads/gallery_img-07.jpg" class="img-fluid" alt="Image">
                     <a href="/static/uploads/Other.pdf" target="_blank">
                         <div class="img-overlay text-center ">
                             <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Other Certification</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- Card 15 -->
+            <div class="col-md-4 col-sm-6 gallery-grid gal_d">
+                <div class="gallery-single fix">
+                    <img src="static/uploads/gallery_img-08.jpg" class="img-fluid" alt="Image">
+                    <a href="/static/uploads/Ethereum.pdf" target="_blank">
+                        <div class="img-overlay text-center ">
+                            <p class="sim-btn2 hvr-bounce-to-top2 pricingTable-signup">Ethereum</p>
                         </div>
                     </a>
                 </div>
