--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
     <div class="container">
         <div class="section-title text-center">
             <h3>Portfolio</h3>
-            <p>Check out projects that i've worked on in the past and certificates that i have achieved.</p>
+            <p>Check out projects that I've worked on in the past and certificates that I have achieved.</p>
         </div>
         <!-- end title -->
         <!-- Card Titles -->
