Top Project update

--- a/templates/index.html
+++ b/templates/index.html
@@ -300,19 +300,19 @@
                                     L0.732,193.75z"></path>
 						</g>
 						<text transform="matrix(1 0 0 1 69.7256 116.2686)" fill="#fff"
-							font-size="45.4489">PresChain</text>
+							font-size="45.4489">TraFiGuard</text>
 					</svg>
                     <div class="pricing-content">
-                        <a href="http://preschain.s3-website-us-east-1.amazonaws.com/" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Link</a>
+                        <a href="https://github.com/VeriPay-Blockchain-Verified-Payments/TrafiGuard" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Link</a>
 
                         <ul class="pricing-content">
                             <li>Solidity</li>
-                            <li>Ethereum</li>
-                            <li>JavaScript</li>
-                            <li>Web3.js</li>
-                            <li>CSS</li>
+                            <li>Compound Finance</li>
+                            <li>React.Js</li>
+                            <li>ChainLink</li>
+                            <li>Bloom</li>
                         </ul>
-                        <a href="https://www.youtube.com/watch?v=gSErS2kUZTI" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Video Demo</a>
+                        <a href="https://www.youtube.com/watch?v=QMix9-AlrM4&feature=youtu.be" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Video Demo</a>
                     </div>
                 </div>
             </div>
@@ -352,20 +352,20 @@
                                     s27.202-37.185,46.917-8.488c19.715,28.693,38.687,13.116,46.502,4.832c7.817-8.282,27.386-15.906,41.405,6.294V0H0.48
                                     L0.732,193.75z"></path>
 						</g>
-						<text transform="matrix(1 0 0 1 69.7256 116.2686)" fill="#fff" font-size="45.4489">Photo
-							Fun</text>
+						<text transform="matrix(1 0 0 1 69.7256 116.2686)" fill="#fff"
+							font-size="45.4489">PresChain</text>
 					</svg>
                     <div class="pricing-content">
-                        <a href="https://dry-coast-19431.herokuapp.com/" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Link</a>
+                        <a href="http://preschain.s3-website-us-east-1.amazonaws.com/" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Link</a>
 
                         <ul class="pricing-content">
-                            <li>Ruby on Rails</li>
-                            <li>Heroku</li>
-                            <li>PostgreSQL</li>
-                            <li>AWS - S3</li>
-                            <li>Linux VM</li>
+                            <li>Solidity</li>
+                            <li>Ethereum</li>
+                            <li>JavaScript</li>
+                            <li>Web3.js</li>
+                            <li>CSS</li>
                         </ul>
-                        <a href="https://www.loom.com/share/21d28021185549eab8139397c17349bc" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Video Demo</a>
+                        <a href="https://www.youtube.com/watch?v=gSErS2kUZTI" target="_blank" class="sim-btn hvr-bounce-to-top pricingTable-signup">Video Demo</a>
                     </div>
                 </div>
             </div>
