CV and dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,7 @@
     <title>Shane O'Neill</title>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    {% block head %}{% endblock %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> {% block head %}{% endblock %}
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Bootstrap CSS -->
@@ -21,6 +20,8 @@
     <link rel="stylesheet" href="{{  url_for('static', filename= 'css/custom.css') }}">
     <!-- ALL JS FILES -->
     <script src="/static/js/all.js"></script>
+
+
 
 </head>
 
