--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -7,6 +7,7 @@
     <title>Countdown</title>
     <link rel="stylesheet" href="/static/css/countdownstyle.css">
     <script src="/static/js/countdownscript.js" defer></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
